--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <div class="carousel">
-        <div class="photos">
+        <div class="box">
           <ul>
             <li><img src="imgs/brownie.jpg" alt="" class="photo" /></li>
             <li><img src="imgs/cake.jpg" alt="" class="photo" /></li>
